[package]
name = "reglex"
version = "1.0.0"
edition = "2021"
description = "A rust lexer generator using regex"
homepage = "https://github.com/nph278/reglex"
repository = "https://github.com/nph278/reglex"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
